# NEWorld

./: .bettercodehub.yml  .codacy.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  NEWorld.DotSettings  README.md  SIGNOFF  appveyor.yml
Core/Source/Common/: Application.cpp  Application.h  Config.h  Console.cpp  Debug.cpp  Dylib.cpp  Dylib.h  EventBus.cpp  EventBus.h  Exception.h  Filesystem.cpp  Filesystem.h  JsonHelper.cpp  JsonHelper.h  Logger.cpp  Logger.h  Modules.cpp  Modules.h  StringUtils.cpp  StringUtils.h  Utility.h
Core/Source/Common/Math/: Vector.h
Core/Source/Common/RPC/: RPC.cpp  RPC.h
Core/Source/Game/Api/: ApiCore.h  nwapi_internal.hpp  nwapigui.hpp
Core/Source/Game/Client/: player.cpp  player.h
Core/Source/Game/Context/: nwcontext.hpp
Core/Source/Game/Server/: nwserverapi.cpp  server.cpp  server.h
Core/Source/Game/SyncService/: WorldStorage.cpp  WorldStorage.h  chunkservice.cpp  chunkservice.hpp  taskdispatcher.cpp  taskdispatcher.hpp
Core/Source/Game/SyncService/world/: Blocks.cpp  Blocks.h  nwchunk.cpp  nwchunk.h  object.h  playerobject.h  world.cpp  world.h
Docs/: installation.md  regulations.md  structure.md
Licenses/: LICENSE_NEXWorld.txt
Modules/: CMakeLists.txt
Modules/Main/: CMakeLists.txt
Modules/Main/Source/: entry.cpp  worldgen.cpp  worldgen.h
Shells/: CMakeLists.txt
Shells/CLI/: CMakeLists.txt
Shells/CLI/Source/: cli.cpp  cli.hpp  command.hpp  main.cpp  main.hpp
Shells/GUI/: CMakeLists.txt
Shells/GUI/Assets/Shaders/Standard/: Fragment.frag  Info.json  Vertex.vert
Shells/GUI/Source/: client.cpp  gamescene.cpp  gamescene.h  neworld.cpp  neworld.h  nwapigui.cpp  renderdetector.cpp  renderdetector.hpp  widget.h  widgetmanager.h  window.cpp  window.h
Shells/GUI/Source/renderer/: blockrenderer.cpp  blockrenderer.h  chunkrenderer.h  renderer.cpp  renderer.h  texture.h  vertexarray.cpp  vertexarray.h  worldrenderer.cpp  worldrenderer.h
Tools/: CMakeLists.txt  CopyAssets.cpp
cmake/: FindSDL2.cmake
licenses/: LICENSE_rpclib.txt
release/: .gitignore  CMakeLists.txt
release/plugins/: CMakeLists.txt
src/: check.py
src/Common/: Config.h  Console.cpp  Console.h  Debug.h  Dylib.cpp  Dylib.h  EventBus.cpp  EventBus.h  Exception.h  Filesystem.cpp  Filesystem.h  Logger.cpp  Logger.h  Modules.cpp  OrderedList.h  RateController.h  StringUtils.cpp  StringUtils.h  Utility.h
src/Common/Json/: JsonHelper.cpp  JsonHelper.h  nlohmann.h
src/Common/Math/: Matrix.h  Vector.h
src/Common/Physics/: AABB.h
src/Common/RPC/: RPC.h
src/Modules/: CMakeLists.txt
src/api/: ApiCore.h  nwapi_internal.hpp  nwapicore.hpp  nwapigui.hpp
src/cli/: cli.cpp  cli.hpp  command.hpp  main.cpp  main.hpp
src/client/: player.cpp  player.h
src/dispatcher/: taskdispatcher.hpp
src/engine/: common.h  nweventbus.cpp  nweventbus.hpp
src/engine/concurrency/: nwconcurrency.cpp  nwconcurrency.hpp
src/engine/maintenance/: Debug.cpp  Debug.h  Logger.cpp  Logger.h  nwdebug.h  nwexception.hpp  nwlogger.cpp  nwlogger.hpp
src/engine/nwjson/: JsonHelper.cpp  JsonHelper.h  json.hpp  nwjson.h
src/engine/nwmath/: nwmatrix.h  nwvector.h
src/engine/nwphysics/: AABB.h  nwaabb.h
src/engine/nwrpc/: nwrpc.hpp
src/engine/nwstdlib/: Console.cpp  Console.h  Dylib.h  StringUtils.h  nwconcepts.hpp  nwconsole.hpp  nwfilesys.h  nwlibrary.h  nworderedlist.hpp  nwratemeter.h  nwstddef.h  nwstrings.h
src/fbstructures/src/client/: login.fbs  serverinfo.fbs
src/fbstructures/src/server/: serverinfo.fbs
src/game/context/: nwcontext.cpp  nwcontext.hpp
src/game/plugin/: plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h
src/gui/: gamescene.cpp  gamescene.h  mainclient.cpp  neworld.cpp  neworld.h  nuklear_helper.cpp  nuklear_helper.h  nuklear_sdl_gl3.h  nuklear_sdl_gles2.h  nwapigui.cpp  renderdetector.cpp  renderdetector.hpp  widget.h  widgetmanager.h  window.cpp  window.h  worldclient.cpp  worldclient.h
src/gui/renderer/: blockrenderer.cpp  blockrenderer.h  chunkrenderer.h  opengl.h  renderer.cpp  renderer.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  worldrenderer.cpp  worldrenderer.h
src/launchers/: client.cpp  shell.cpp
src/main/: entry.cpp  worldgen.cpp  worldgen.h
src/server/: NewClass.cpp  NewClass.h  nwserverapi.cpp  server.cpp  server.h
src/shared/: common.h
src/sync_service/: ChunkService.hpp  chunkservice.cpp  chunkservice.hpp  taskdispatcher.cpp  taskdispatcher.hpp
src/sync_service/world/: nwblock.cpp  nwblock.h  nwchunk.cpp  nwchunk.h  nwplayer.hpp  object.h  playerobject.h  world.cpp  world.h
